# hive

./: Cargo.toml  README.md
docs/superpowers/plans/: 2026-03-29-hive-v1.md  2026-04-03-disable-ssl-verification.md
docs/superpowers/specs/: 2026-03-29-hive-design.md  2026-03-29-install-layout-normalization-design.md  2026-03-31-proxy-env-design.md  2026-04-03-disable-ssl-verification-design.md  2026-04-03-interactive-github-sync-design.md  2026-04-04-install-binary-selection-fallback-design.md
src/: activation.rs  app.rs  cli.rs  config.rs  error.rs  github.rs  installer.rs  lib.rs  main.rs  manifest.rs  platform.rs  proxy.rs  state.rs  sync.rs
tests/: cli_help.rs  cli_install.rs  cli_sync.rs  cli_uninstall.rs  cli_use.rs
tests/fixtures/manifests/: rg.toml
tests/fixtures/manifests/ambiguous/: rg.toml
tests/fixtures/manifests/nested/rg/: manifest.toml
tests/support/: mod.rs
